--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,16 @@
 
 export("%>%")
 export(get_colours)
+export(scale_colour_1in1000)
+export(scale_colour_2dii)
+export(scale_fill_1in1000)
+export(scale_fill_2dii)
 importFrom(dplyr,arrange)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
+importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_fill_manual)
 importFrom(glue,glue)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
