Make scales work with unknown names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(scale_colour_1in1000)
 export(scale_colour_2dii)
 export(scale_fill_1in1000)
 export(scale_fill_2dii)
+import(r2dii.plot)
 importFrom(dplyr,arrange)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
@@ -16,4 +17,8 @@ importFrom(glue,glue)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(rlang,abort)
+importFrom(rlang,as_function)
+importFrom(rlang,inform)
+importFrom(stats,setNames)
+importFrom(stringr,str_replace_all)
 importFrom(tibble,tribble)
