--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,11 +21,12 @@ Imports:
     magrittr,
     rlang,
     tibble,
-    ggplot2
+    ggplot2,
+    r2dii.plot,
+    stringr
 Depends: 
     R (>= 2.10)
 Suggests: 
-    r2dii.plot,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 URL: https://2degreesinvesting.github.io/r2dii.colours
