--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ importFrom(ggplot2,scale_fill_manual)
 importFrom(glue,glue)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
+importFrom(rlang,.env)
 importFrom(rlang,abort)
 importFrom(rlang,as_function)
 importFrom(rlang,inform)
