use_pkgdown_github_pages

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: https://2degreesinvesting.github.io/r2dii.colours
+url: https://2degreesinvesting.github.io/r2dii.colours/
 template:
   bootstrap: 5
 
