--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(glue,glue)
 importFrom(magrittr,"%>%")
+importFrom(rlang,"%||%")
 importFrom(rlang,.data)
 importFrom(rlang,.env)
 importFrom(rlang,abort)
