--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(glue,glue)
